ui/dep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirdc-authorizater-ui-svc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    run: mirdc-authorizater-ui
  sessionAffinity: None
  type: ClusterIP
